--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "events": "^3.0.0",
     "express": "^4.17.1",
     "ping": "^0.2.2",
+    "uuid": "^3.3.3",
     "xml-js": "^1.6.11",
     "youch": "^2.0.10"
   },
